# TikkaMasalAI

./: .dockerignore  .gitignore  .pre-commit-config.yaml  404.html  AGENTS.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  api.html  datasetcard_food101.md  datasetcard_template.md  docker-compose-local.yml  docker-compose.yml  dvc.yaml  emissions.csv  index.html  modelcard_food10193M.md  modelcard_resnet18.md  modelcard_vgg16.md  package-lock.json  package.json  pyproject.toml
.dvc/: config
.github/workflows/: deploy.yml  docs.yml  publish-ghcr.yml  ruff.yml  tests.yml
configs/: training_default.yaml  training_production.yaml  training_quick.yaml
contributing/: index.html
data/raw/: .gitignore
data/raw/food101/: README.md  data.dvc
development/code_style/: index.html
development/containers/: index.html
development/deployment/: index.html
development/ruff_ci/: index.html
development/testing/: index.html
docs/: README.md  mkdocs.yml  ruff_ci.md
docs/docs/: api.html  contributing.md  getting-started.md  index.md
docs/docs/development/: code_style.md  containers.md  deployment.md  model_deployment_api.md  model_deployment_component_delivery.md  ruff_ci.md  testing.md
notebooks/: deepchecks.ipynb  explore_data.ipynb  investigate_shap.ipynb
reports/: carbon_viz.py  emissions.csv
reports/shap/resnet18/: meta.json
scripts/: deploy_to_hf.sh
src/: __init__.py  labels.py
src/api/: api.py  deps.py  samples.py  schemas.py
src/backend/: Dockerfile  app.py  constants.py  download_model.py  export_schema.py  openapi.json
src/backend/routers/: dashboard.py  llm.py  predict.py
src/data/: download_data.py  food_dataset.py
src/eval/: eval.py  evaluate_food101.py  shap_qa.py
src/frontend/: Dockerfile  __init__.py  config.py  explain.py  heatmap.py  image_utils.py  llm.py  main.py  predict.py
src/frontend/.streamlit/: secrets.toml
src/models/: food_classification_model.py  model_discovery.py  prithiv_ml_food101.py  resnet18.py  vgg16.py
src/serve/: score_prithiv_food101.py
src/train/: config.py  data_utils.py  emissions.csv  finetune_resnet18.py  model_utils.py  preprocess_data.py  train.py  training_utils.py
streamlit/: .dockerignore  Dockerfile  app.py  config.toml  requirements.txt
tests/: test_clean_data.py  test_data.py  test_model.py
tests/backend/: conftest.py  test_app.py  test_explain_endpoint_errors.py  test_llm.py  test_predict.py  test_predict_errors.py  test_predict_explain.py  test_predict_unit.py
tests/frontend/: test_explain_utils.py  test_heatmap_utils.py  test_llm_utils.py  test_predict_utils.py
tikkamasalai-requests/: availability.bru  bruno.json  health.bru  llm-generate.bru  llm-health.bru  predict-explain.bru  predict.bru
tikkamasalai-requests/environments/: production.bru
