[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tikka-masalai"
version = "0.0.1"
description = "MLOPS project FIB"
authors = [
  { name = "Team Tikka MasalAI" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
]
dependencies = [
    "dagshub>=0.6.3",
    "dvc==3.63.0",
    "ruamel-yaml-clib==0.2.8",
    "dvc-s3>=3.2.2",
    "huggingface-hub>=0.35.0",
    "ipykernel>=6.30.1",
    "ipywidgets>=8.1.7",
    "matplotlib>=3.10.6",
    "mlflow>=2,<3",
    "numpy<2.0",
    "pandas>=2.3.2",
    "pillow>=11.3.0",
    "polars>=1.0.0",
    "pyarrow>=4.0.0,<20.0.0",
    "pytest",
    "python-dotenv",
    "ruff",
    "torch==2.2.2",
    "torchvision==0.17.2",
    "tqdm>=4.67.1",
    "transformers>=4.56.2",
]
requires-python = ">=3.10"

# This makes src/ discoverable as a package
[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.uv]
required-environments = ["sys_platform == 'darwin' and platform_machine == 'x86_64'"]

[tool.pytest.ini_options]
pythonpath = "."
testpaths = "tests"
addopts = "--junitxml=out/tests-report.xml --cov=src --cov-report=html:reports/coverage"

[tool.coverage.run]
omit = ["src/data/validate_data.py", "src/data/gx_context_configuration.py", "src/modeling/train.py"]

[dependency-groups]
dev = [
    "black>=25.1.0",
    "pylint>=3.3.8",
    "pytest>=8.4.2",
    "nbqa>=1.0.0",
    "pre-commit>=3.4.0",
    "pytest-cov>=7.0.0",
]

